Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-6866

Publish project wizard fails to create package because debian/rules is not executable

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • Qt Creator 2.5.0-beta
    • Qt Creator 2.4.0
    • Remote Linux
    • None
    • Arch Linux x86_64
    • 18735b6eb6f746a80455c5f3e3944da7dada27b5

    Description

      When using the "Publish Project..." wizard to publish a Maemo5 project it fails with the following error message:

      debian/rules clean
      Can't exec "debian/rules": Permission denied at /home/micha/Develop/QtSDK/Maemo/4.6.2/madbin/dpkg-buildpackage line 474.
      dpkg-buildpackage: failure: debian/rules clean failed with unknown exit code -1

      Apparently QtCreator copies the whole source dir to /tmp/qtc_packaging_projectname/ but for some reason takes away the executable flag from the rules file (/tmp/qtc_packaging_prjectname/projectname/debian/rules) and then fails to execute it.

      Setting the x-bit manually between the copy process and the actual execution makes the wizard complete sucessfully.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kandeler Christian Kandeler
            mzanetti Michael Zanetti
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes