Maemo: Fix packaging in publisher.

The debian/rules file has to made executable, just like in the normal
packaging step.

Change-Id: Idcd20551c2720503ef7cea844dfad8f24281582c
Task-number: QTCREATORBUG-6866
Reviewed-by: Alessandro Portale <alessandro.portale@nokia.com>